# prediction-market-analysis

./: .dockerignore  .env.example  .gitignore  AUDIT-GOAL.md  AUDIT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  main.py  pyproject.toml  render.yaml
.claude/: CLAUDE.md
.claude/commands/: add-ai-step.md  add-api-route.md  add-guard.md  apply-to-tools.md  check-build.md  debug-auth.md  deploy-check.md  gen-types.md  new-action.md  new-component.md  new-migration.md  new-page.md  review-rls.md
.claude/skills/: ai-llm-integration-derived.md  ai-llm-integration.md  api-route-patterns.md  architecture.md  auth-complete-flow.md  auto-deploy-flyio.md  billing-stripe-integration.md  category-e0dc07.md  claude-api-spec-gen.md  database-migration-pattern.md  debugging.md  deployment.md  devops-deploy-checklist.md  general-best-practices.md  inbox-scheduling.md  japanese-business-ui.md  make-webhook-integration.md  medical-lecture-slide-design.md  multi-tool-bulk-apply.md  nextjs-supabase-init.md  performance.md  security-best-practices.md  supabase-migration-pattern.md  troubleshoot-checklist.md  ui-component-patterns.md
.github/workflows/: ci.yml  deploy.yml  fly-deploy.yml  post-deploy-smoke.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 0001_init.py  0001_initial.py  0002_add_ui_state.py  0002_phase1_tables.py  0003_signal_dedup.py  0004_jobs_heartbeat.py  0005_fk_on_delete.py  0006_auth_users.py  0007_billing.py  0008_notification_prefs.py  0009_ai_model_settings.py  0010_login_tokens.py
docs/: AUDIT_REPORT.md  WORK_MANUAL.md  requirements.md
docs/manual/: INITIAL_SEED.sql  USER_MANUAL.md
docs/ops/: deploy.md  disaster-recovery.md  troubleshoot.md
docs/plans/: IMPLEMENTATION_PLAN.md
docs/requirements/: PHASE1_LIVE_EXECUTION.md  REBUILD.md
docs/setup/: google-oauth.md
scripts/: deploy-fly.sh  download.sh  start.sh
src/common/: analysis.py
src/copytrader/: __init__.py  cli.py  (+4 more)
tests/: test_backfill.py  test_backfill_cursor.py  test_chain_errors.py  test_compile.py  test_decoder.py  test_poller_helpers.py  test_replay_position.py  test_risk.py  test_sizing.py  test_trading.py  test_wallet_side.py
web/: server.py
(+157 files in other folders)
